<resources>
    <string name="facebook_app_id">1910960922504062</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1910960922504062</string>
    <string name="app_name">ShareCare</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">Challenge Now</string>
    <string name="chat_not_setup">Chat for this user is not been setup</string>
    <string name="firebaseid_not_exist">Firebase Id for that team not exist</string>
    <string name="wiat_for_chat">Please wait! While we load your chat</string>
    <string name="arena">Arena</string>
    <string name="team_name">Team Name</string>
    <string name="league">League</string>
    <string name="select_arena">Select arena</string>
    <string name="select_time">Select time</string>
    <string name="challengenow">Share n\' Care</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="user_name">Username</string>
    <string name="change_password">Change password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="language">Language</string>
    <string name="distance">Distance</string>
    <string name="match_List">MATCH LIST</string>
    <string name="match_List_des">Here you find a list of all available matches that you can choose to accept. You can see which team upload the match, all the information about it and if you want to accept the challenge.</string>
    <string name="invite_Team">Invite Teams for a footballgame!</string>
    <string name="invite_Team_des">Create an match that any team in your league can choose to accept. You can create multiple matches for the whole season!</string>
    <string name="team_List">TEAM LIST</string>
    <string name="team_List_des">Here you find all the available teams in your league.You can challenge them directly from here or chat with them if you would like to.</string>
    <string name="tournament_List">See all Tournament available</string>
    <string name="tournament_List_des">See if there are any Tournaments available for your team to apply for. You can pay directly through our app and guarantee your spot immediately.</string>
    <string name="switch_Team">Have more than one Team?</string>
    <string name="switch_Team_des">You can add and manage multiple teams in our app. No matter what gender or age they are in.</string>
    <string name="add_team">Add your new team.</string>
    <string name="add_tournament">Make your own Tournament</string>
    <string name="add_tournament_des">Create a Tournament and earn some money. Choose how big or small you want your tournament to be and how much it will cost for teams to participate, everything is up to you. Team pay directly in the app</string>
    <string name="history">History</string>
    <string name="register">Sign up</string>
    <string name="error_occured">Error occurred</string>
    <string name="created_new_challenge">Created new challenge</string>
    <string name="profile">Profile</string>
    <string name="tournament">Tournament</string>
    <string name="create_new_team">Create new team</string>
    <string name="geopoint">Location</string>
    <string name="update">Update</string>
    <string name="played">Played</string>
    <string name="revoke">Revoke</string>
    <string name="reject">Reject</string>
    <string name="country">Country</string>
    <string name="team_description">Description</string>
    <string name="select_league">Select league</string>
    <string name="info">info</string>
    <string name="teams">Participants</string>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="fee">Fee</string>
    <string name="pending">Pending</string>
    <string name="upcoming">Upcoming</string>
    <string name="message">Message</string>
    <string name="club_name">Club</string>
    <string name="no_team_registered">No team is registered</string>
    <string name="distance_unknown">Distance unknown</string>
    <string name="activate_gps">Activate GPS</string>
    <string name="activate_gps_message">GPS must be activated</string>
    <string name="min_search_char_text">Your search query must not be less than 3 characters</string>
    <string name="share_subject_default">I have joined Challenge Now, join and accept my challenge download the app from www.challengenow.se</string>
    <string name="share_link_too">Share link too..</string>
    <string name="accept">Accept</string>
    <string name="user_already_exists">User %1$s already exists, if this is your account please login with your credentials</string>
    <string name="firebase_invite_message">%1$s have invited you to join ChallengeNow. Download from here www.challengenow.se</string>
    <string name="version">Version</string>
    <string name="find_arena">Find Restaurant</string>
    <string name="home_arena">Home arena</string>
    <string name="find_directions">Find directions</string>
    <string name="select_as_home_arena">Select as home arena</string>
    <string name="show_list">View list</string>
    <string name="show_map">View map</string>
    <string name="loading">Loading..</string>
    <string name="no_data_available">No results</string>
    <string name="search_range_distance">Search range</string>
    <string name="accept_challenge">Accept Challenge</string>
    <string name="away_team">Away team</string>
    <string name="chat">Chat</string>
    <string name="home_team">Home team</string>
    <string name="my_matches">Matches</string>
    <string name="create_open">Open for all</string>
    <string name="select_date">Select date</string>
    <string name="error_select_date_and_time_and_location">Select date,time and location</string>
    <string name="share_with_friend">Invite friend</string>
    <string name="no_open_games_near_you">There is no open games near you.</string>
    <string name="my_open_matches_created">My open games</string>
    <string name="add">Add</string>
    <string name="signup_heading">ChallengeNow</string>
    <string name="signup_slogan">Don’t limit your challenges, challenge your limits</string>
    <string name="signup">SIGN UP</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in"><u>SIGN IN</u></string>
    <string name="title_activity_register">Sign up</string>
    <string name="search_club_by_name">Search club</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password_mismatch">Password mismatch</string>
    <string name="club_mail">Club\'s mail</string>
    <string name="register_club">Register club</string>
    <string name="no_account_signup">No account? Sign up here</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">Login</string>
    <string name="adding_place">Add arena</string>
    <string name="location_added">Place added</string>
    <string name="error_location_add">Error occurer when adding location</string>
    <string name="error_server_unreachable">Sorry our service is not reachable</string>
    <string name="user_signup_successfully">Username registered</string>
    <string name="user_login_successful">User logged in successful</string>
    <string name="facebook_login_failed">Failed too login with Facebook</string>
    <string name="failed_too_login_with_google">Failed too login with Google</string>
    <string name="facebook_login_successful">Facebook login successful</string>
    <string name="facebook_enable_email_permission">Facebook email permission is missing, please enable this permission too continue</string>
    <string name="last_application_date">Last join date</string>
    <string name="facebook_connected">Facebook connected</string>
    <string name="facebook_connect">Connect to Facebook</string>
    <string name="google_connected">Google connected</string>
    <string name="google_connect">Connect to Google</string>
    <string name="google_account_already_connected">Google is already connected too your account</string>
    <string name="facebook_account_already_connected">Facebook is already connected too your account</string>
    <string name="password_too_short">Password is too short minum is six letters</string>
    <string name="signin_and_connect_with_provider"> An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address</string>
    <string name="no_open_games_created">You have not created any open games</string>
    <string name="no_pending_games">You have not any pending games</string>
    <string name="no_upcoming_matches">You have no upcoming games</string>
    <string name="no_match_history">You have not played any matches</string>
    <string name="create_new_challenge">Create new challenge</string>
    <string name="challenge_qoute_limt">Don\'t limit your challenges, challenge your limits</string>
    <string name="confirm_action">Are you sure you want to ?</string>
    <string name="cancel_match">%1$s this match</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="chat_disabled_for_open_request">Chat is disabled for open request</string>
    <string name="no_teams_found">No teams found</string>
    <string name="invite_team">Invite teams</string>
    <string name="empty_serie_invite_call">Sorry your league is empty, please invite a new team and help us grow this league</string>
    <string name="no_teams_found_text">Sorry couldn\'t find what you looking for, feel free to invite more teams to help us grow this league</string>
    <string name="select_team">Select team</string>
    <string name="my_league">My League</string>
    <string name="my_teams">My teams</string>
    <string name="no_tournaments_available">There are no tournaments available</string>
    <string name="find">Find</string>
    <string name="not_participate_tournaments">You have not joined any tournaments</string>
    <string name="invite_team_call">Invite teams and help us grow</string>
    <string name="no_description">No description</string>
    <string name="register_team">Register team</string>
    <string name="challenge">Challenge</string>
    <string name="created_games">Open games</string>
    <string name="spots">spots</string>
    <string name="start_date">Start date</string>
    <string name="status">Status</string>
    <string name="accepted">Accepted</string>
    <string name="share_app">Share app with social apps</string>
    <string name="no_matches_found">No matches found near you</string>
    <string name="add_club">Add club</string>
    <string name="rate_event_txt">RateEvent</string>
    <string name="rate_this_team">Rate this team</string>
    <string name="amount_to_pay">Amount</string>
    <string name="rate">Rate</string>
    <string name="no_club_found">No club found</string>
    <string name="could_not_find_club">Could not find your club ?</string>
    <string name="pay_with_swish">Pay with Swish</string>
</resources>