<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    android:padding="@dimen/pd_40">


    <include
        android:id="@+id/progressView"
        layout="@layout/progress_view"
        android:visibility="gone"></include>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical|center_horizontal|center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/challengenow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/signup_heading"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_h1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_slogan"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_10" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/colorhint"
            android:hint="@string/hint_email"
            android:padding="@dimen/pd_10"
            android:paddingBottom="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorhint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorhint"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:padding="@dimen/pd_10"
            android:textColorHint="@color/colorhint" />


        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_30"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_30"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="end"
                android:text="@string/no_account_signup"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
