<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include
        android:id="@+id/progressView"
        layout="@layout/progress_view"
        android:visibility="gone"></include>


    <LinearLayout
        android:id="@+id/paymentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Event name"
            android:textSize="@dimen/size_h1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_5"
            android:layout_marginBottom="@dimen/mg_5"
            android:text="@string/team_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mg_5"
                android:layout_marginBottom="@dimen/mg_5"
                android:layout_weight="1"
                android:text="@string/amount_to_pay" />

            <TextView
                android:id="@+id/event_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mg_5"
                android:layout_marginBottom="@dimen/mg_5"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/fee" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/swishBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_20"
            android:background="@drawable/swish_button"
            android:drawableLeft="@drawable/swish_logo"
            android:paddingLeft="@dimen/pd_10"
            android:text="@string/pay_with_swish"
            android:textColor="@color/gray" />
    </LinearLayout>


</RelativeLayout>
