<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center_vertical|center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/object_margin"
            android:padding="@dimen/object_margin"
            android:src="@drawable/ic_share_grey" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_margin"
            android:gravity="center"
            android:text="@string/invite_team_call"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/object_margin"

            android:text="@string/challenge_qoute_limt"
            android:textSize="14dp"
            android:textStyle="italic" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/btn_padding_16">


        <Button
            android:id="@+id/share_app_social"
            style="@style/Widget.AppCompat.Button.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            android:layout_weight="1"

            android:background="@drawable/default_btn_bg"
            android:text="@string/share_app"
            android:textColor="@color/white" />


    </LinearLayout>


</RelativeLayout>